Describe how to move sidebar to right

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -25,6 +25,7 @@
                            name="sidebarPosition" value="2">
                __MSG_config.sidebarPosition.right__</label>
     </p>
+    <p clss="sub">__MSG_config.sidebarPosition.description__</p>
     <fieldset>
       <legend>__MSG_config.style.caption__</legend>
       <ul id="style-radiogroup">
