Add link to code snippets

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -238,6 +238,9 @@
     <h1>__MSG_config.advanced.caption__</h1>
     <fieldset>
       <legend>__MSG_config.userStyleRules.label__</legend>
+      <p>__MSG_config.userStyleRules.description.before__
+         <a href="__MSG_config.userStyleRules.description.link.uri__">__MSG_config.userStyleRules.description.link.label__</a>
+         __MSG_config.userStyleRules.description.after__</p>
       <textarea id="userStyleRules"
                 rows="10"
                 style="width: 100%"></textarea>
