Prepare to request permission for bookmarks

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -96,7 +96,13 @@
               __MSG_context.expandAll.label__</label></p>
     <p><label><input id="context_bookmarkTree"
                      type="checkbox">
-              __MSG_context.bookmarkTree.label__</label></p>
+              __MSG_context.bookmarkTree.label__</label>
+    <!--
+    <p class="sub"><label><input id="bookmarksPermissionGranted"
+                                 type="checkbox"
+                                 onchange="requestPermissionFor('bookmarks', this)">
+                          __MSG_config.requestPermissions.bookmarks__</label>
+    -->
 
 
     <h1>__MSG_config.newTab.caption__</h1>
