Handle events correctly

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -99,8 +99,7 @@
               __MSG_context.bookmarkTree.label__</label>
     <!--
     <p class="sub"><label><input id="bookmarksPermissionGranted"
-                                 type="checkbox"
-                                 onchange="requestPermissionFor('bookmarks', this)">
+                                 type="checkbox">
                           __MSG_config.requestPermissions.bookmarks__</label>
     -->
 
