--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -197,6 +197,9 @@
     <p><label><input id="collapseExpandSubtreeByDblClick"
                      type="checkbox">
              __MSG_config.collapseExpandSubtreeByDblClick.label__</label></p>
+    <p><label><input id="allUrlsPermissionGranted"
+                     type="checkbox">
+              __MSG_config.requestPermissions.allUrls__</label></p>
 
     <fieldset>
       <legend>__MSG_config.closeParentBehavior.caption__</legend>
