Fix missing tags

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -96,10 +96,10 @@
               __MSG_context.expandAll.label__</label></p>
     <p><label><input id="context_bookmarkTree"
                      type="checkbox">
-              __MSG_context.bookmarkTree.label__</label>
+              __MSG_context.bookmarkTree.label__</label></p>
     <p class="sub"><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
-                          __MSG_config.requestPermissions.bookmarks__</label>
+                          __MSG_config.requestPermissions.bookmarks__</label></p>
 
 
     <h1>__MSG_config.newTab.caption__</h1>
