--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -13,6 +13,7 @@
     <script type="application/javascript" src="/common/xpath.js"></script>
     <script type="application/javascript" src="/common/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/common/MetricsData.js"></script>
+    <script type="application/javascript" src="/common/permissions.js"></script>
     <script type="application/javascript" src="/common/tree/base.js"></script>
     <script type="application/javascript" src="/common/tree/api-tabs.js"></script>
     <script type="application/javascript" src="/common/tree/get-tabs.js"></script>
