--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -10,6 +10,7 @@
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/options/Options.js"></script>
     <script type="application/javascript" src="/common/l10n.js"></script>
+    <script type="application/javascript" src="/common/permissions.js"></script>
     <script type="application/javascript" src="/background/migration.js"></script>
     <script type="application/javascript" src="/options/init.js"></script>
     <link rel="stylesheet" type="text/css" href="options.css"/>
