--- a/webextensions/resources/updated-from-legacy.html
+++ b/webextensions/resources/updated-from-legacy.html
@@ -18,8 +18,19 @@
 </style>
 <script type="application/javascript" src="./updated-from-legacy.js"></script>
 <script type="application/javascript" src="/common/l10n.js"></script>
+<script type="application/javascript" src="/common/tree/constants.js"></script>
+<script type="application/javascript" src="/common/permissions.js"></script>
+<script type="application/javascript" src="/common/Configs.js"></script>
+<script type="application/javascript" src="/common/common.js"></script>
 
 <h1 id="title">__MSG_extensionName__</h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
 <p>__MSG_message.updatedFromLegacy.description__</p>
 <p>__MSG_message.updatedFromLegacy.migrateSessions.before__<a href="__MSG_updatedFromLegacy.migrateSessions.link.uri__">__MSG_message.updatedFromLegacy.migrateSessions.link.label__</a>__MSG_message.updatedFromLegacy.migrateSessions.after__</p>
+
+<p><label><input id="bookmarksPermissionGranted"
+                 type="checkbox">
+                 __MSG_config.requestPermissions.bookmarks__</label></p>
+<p><label><input id="allUrlsPermissionGranted"
+                 type="checkbox">
+          __MSG_config.requestPermissions.allUrls__</label></p>
