Use message tab as a start message

--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -25,12 +25,12 @@
 
 <h1 id="title">__MSG_extensionName__</h1>
 <div><img id="icon" src="24x24-light.svg" alt=""></div>
-<p>__MSG_message.updatedFromLegacy.description__</p>
-<p>__MSG_message.updatedFromLegacy.migrateSessions.before__<a href="__MSG_updatedFromLegacy.migrateSessions.link.uri__">__MSG_message.updatedFromLegacy.migrateSessions.link.label__</a>__MSG_message.updatedFromLegacy.migrateSessions.after__</p>
+<p>__MSG_message.startup.description__</p>
+<p>__MSG_message.startup.migrateSessions.before__<a href="__MSG_migrateSessions.link.uri__" target="_blank">__MSG_message.startup.migrateSessions.link.label__</a>__MSG_message.startup.migrateSessions.after__</p>
 
 <p><label><input id="bookmarksPermissionGranted"
                  type="checkbox">
-                 __MSG_config.requestPermissions.bookmarks__</label></p>
+          __MSG_message.startup.requestPermissions.bookmarks__</label></p>
 <p><label><input id="allUrlsPermissionGranted"
                  type="checkbox">
-          __MSG_config.requestPermissions.allUrls__</label></p>
+          __MSG_message.startup.requestPermissions.allUrls__</label></p>
