--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -270,7 +270,7 @@
     <fieldset>
       <legend>__MSG_config.importedTreeStructureFromLegacy.label__</legend>
       <p>__MSG_config.migrateSessionStore.before__
-         <a href="__MSG_updatedFromLegacy.migrateSessions.link.uri__">__MSG_config.migrateSessionStore.link.label__</a>
+         <a href="__MSG_migrateSessions.link.uri__">__MSG_config.migrateSessionStore.link.label__</a>
          __MSG_config.migrateSessionStore.after__</p>
       <p><label><input id="migrateLegacyTreeStructure"
                        type="checkbox">
