--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -16,7 +16,7 @@
     height: 10em;
   }
 </style>
-<script type="application/javascript" src="./updated-from-legacy.js"></script>
+<script type="application/javascript" src="./startup.js"></script>
 <script type="application/javascript" src="/common/l10n.js"></script>
 <script type="application/javascript" src="/common/tree/constants.js"></script>
 <script type="application/javascript" src="/common/permissions.js"></script>
