--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -60,6 +60,18 @@
               __MSG_config.style.sidebar__</label></li>
       </ul>
     </fieldset>
+    <p>__MSG_config.scrollbarMode.caption__
+       <br />
+       <label><input type="radio"
+                     name="scrollbarMode" value="0">
+         __MSG_config.scrollbarMode.default__</label>
+       <label><input type="radio"
+                     name="scrollbarMode" value="1">
+         __MSG_config.scrollbarMode.narrow__</label>
+       <label><input type="radio"
+                     name="scrollbarMode" value="2">
+         __MSG_config.scrollbarMode.hide__</label>
+    </p>
     <p><label>__MSG_config.maxTreeLevel.before__
               <input id="maxTreeLevel"
                      type="number"
