Make the very basic style choosable as "No Decoration" #1604

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -58,6 +58,9 @@
                           name="style" value="sidebar">
               <img src="style-sidebar.png"/>
               __MSG_config.style.sidebar__</label></li>
+        <li><label><input type="radio"
+                          name="style" value="none">
+              __MSG_config.style.none__</label></li>
       </ul>
     </fieldset>
     <p>__MSG_config.scrollbarMode.caption__
