Don't use system color for startup page

--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -4,8 +4,8 @@
 <title></title>
 <style type="text/css">
   body {
-    background: white;
-    color: black;
+    background: #f9f9fa;
+    color: #0c0c0d;
     padding: 2em 12%;
     text-align: center;
     font-size: 95%;
@@ -62,13 +62,17 @@
   }
   .user-chrome-css p {
     margin: 1em 0 0 1em;
-    color: InfoText;
-    background: InfoBackground;
+    color: #efefef;
+    background: #0c0c0d;
     border: 1px solid;
     border-radius: 0.5em;
     padding: 0.5em;
     box-shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.35);
     min-width: 2em
+  }
+  .user-chrome-css :link,
+  .user-chrome-css :visited {
+    color: white;
   }
   .user-chrome-css:hover p.notify,
   .user-chrome-css:not(:hover) p.description {
