Add ability to prevent control for focusing of tabs when the current tab is focused #1510

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -218,6 +218,18 @@
               __MSG_config.requestPermissions.allUrls__</label></p>
 
     <fieldset>
+      <legend>__MSG_config.moveFocusInTreeForClosedCurrentTab.caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="moveFocusInTreeForClosedCurrentTab" value="true">
+              __MSG_config.moveFocusInTreeForClosedCurrentTab.true__</label></li>
+        <li><label><input type="radio"
+                          name="moveFocusInTreeForClosedCurrentTab" value="false">
+              __MSG_config.moveFocusInTreeForClosedCurrentTab.false__</label></li>
+      </ul>
+      <p>__MSG_config.moveFocusInTreeForClosedCurrentTab.description__</p>
+    </fieldset>
+    <fieldset>
       <legend>__MSG_config.closeParentBehavior.caption__</legend>
       <ul>
         <li><label><input type="radio"
