Add UI to configure inheritance of the container for new blank tab #1579

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -181,6 +181,9 @@
       </ul>
     </fieldset>
 
+    <p><label><input id="inheritContextualIdentityToNewChildTab"
+                     type="checkbox">
+              __MSG_config.inheritContextualIdentityToNewChildTab.label__</label></p>
     <p><label><input id="autoGroupNewTabs"
                      type="checkbox">
               __MSG_config.autoGroupNewTabs.before__
