Show boxes to handle dragover event when the tab is going to be dropped outside of the sidebar

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -60,6 +60,10 @@
                 title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
       </div>
     </div>
+    <div class="tab-drop-blocker" id="tab-drop-blocker-top"></div>
+    <div class="tab-drop-blocker" id="tab-drop-blocker-right"></div>
+    <div class="tab-drop-blocker" id="tab-drop-blocker-bottom"></div>
+    <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
       <li id="dummy-tab" class="tab">
