Synchronize throbber animation based on single animation element #1543

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -66,10 +66,8 @@
     <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
-      <li id="dummy-tab" class="tab">
-        <span class="favicon">
-          <span class="throbber"></span>
-        </span>
+      <li id="dummy-tab" class="tab loading">
+        <span class="favicon"><span id="master-throbber-container"><span id="master-throbber"></span></span></span>
         <span class="label">-</span>
         <span class="counter">0</span>
         <span class="closebox">0</button>
