Remove needless contents of dummy closebox

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -70,7 +70,7 @@
         <span class="favicon"><span id="master-throbber-container"><span id="master-throbber"></span></span></span>
         <span class="label">-</span>
         <span class="counter">0</span>
-        <span class="closebox">0</button>
+        <span class="closebox"></button>
       </li>
     </ul>
     <div id="blocking-screen">
