--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -66,8 +66,11 @@
     <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
-      <li id="dummy-tab" class="tab loading">
-        <span class="favicon"><span id="master-throbber-container"><span id="master-throbber"></span></span></span>
+      <li id="dummy-tab" class="tab">
+        <span class="favicon">
+          <span class="throbber" id="master-throbber"></span>
+          <span class="throbber"><span id="timer-master-throbber"></span></span>
+        </span>
         <span class="label">-</span>
         <span class="counter">0</span>
         <span class="closebox"></button>
