Use only one master throbber

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -68,8 +68,7 @@
       <span id="dummy-favicon-size-box"></span>
       <li id="dummy-tab" class="tab">
         <span class="favicon">
-          <span class="throbber" id="master-throbber"></span>
-          <span class="throbber"><span id="timer-master-throbber"></span></span>
+          <span class="throbber"><span id="master-throbber"></span></span>
         </span>
         <span class="label">-</span>
         <span class="counter">0</span>
