Add checkbox to show container selector on the new tab button #1571

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -83,6 +83,9 @@
     <p><label><input id="faviconizePinnedTabs"
                      type="checkbox">
              __MSG_config.faviconizePinnedTabs.label__</label></p>
+    <p><label><input id="showContextualIdentitiesSelector"
+                     type="checkbox">
+             __MSG_config.showContextualIdentitiesSelector.label__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
