Add UI for unified scrollbar config

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -72,6 +72,9 @@
                      name="scrollbarMode" value="1">
          __MSG_config.scrollbarMode.narrow__</label>
        <label><input type="radio"
+                     name="scrollbarMode" value="3">
+         __MSG_config.scrollbarMode.overlay__</label>
+       <label><input type="radio"
                      name="scrollbarMode" value="2">
          __MSG_config.scrollbarMode.hide__</label>
     </p>
