Hide configurations unavailable on macOS

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -65,10 +65,10 @@
     </fieldset>
     <p>__MSG_config.scrollbarMode.caption__
        <br />
-       <label><input type="radio"
+       <label class="unavailable-on-mac"><input type="radio"
                      name="scrollbarMode" value="0">
          __MSG_config.scrollbarMode.default__</label>
-       <label><input type="radio"
+       <label class="unavailable-on-mac"><input type="radio"
                      name="scrollbarMode" value="1">
          __MSG_config.scrollbarMode.narrow__</label>
        <label><input type="radio"
