--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -7,4 +7,6 @@
     background: ThreeDFace;
   }
 </style>
+<script type="application/javascript" src="/common/l10n.js"></script>
 <script type="application/javascript" src="./group-tab.js"></script>
+<p><label><input id="temporary" type="checkbox">__MSG_groupTab.temporary.label__</label></p>
