--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -6,7 +6,21 @@
   :root {
     background: ThreeDFace;
   }
+
+  h1 {
+    display: flex;
+    flex-direction: row;
+  }
+
+  h1 > * {
+    flex-grow: 1;
+  }
+
+  #title-field {
+    display: none;
+  }
 </style>
 <script type="application/javascript" src="/common/l10n.js"></script>
 <script type="application/javascript" src="./group-tab.js"></script>
+<h1><span id="title"></span><input id="title-field" type="text"></h1>
 <p><label><input id="temporary" type="checkbox">__MSG_groupTab.temporary.label__</label></p>
