Add folder icon beside title of the group tab

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -12,6 +12,11 @@
     flex-direction: row;
   }
 
+  h1::before {
+    content: "📂";
+    margin-right: 0.25em;
+  }
+
   h1 > * {
     flex-grow: 1;
   }
