Add configuration UI for color scheme #1641

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -63,6 +63,15 @@
               __MSG_config.style.none__</label></li>
       </ul>
     </fieldset>
+    <p>__MSG_config.colorScheme.caption__
+       <br />
+       <label><input type="radio"
+                     name="colorScheme" value="photon">
+         __MSG_config.colorScheme.photon__</label>
+       <label><input type="radio"
+                     name="colorScheme" value="system-color">
+         __MSG_config.colorScheme.systemColor__</label>
+    </p>
     <p>__MSG_config.scrollbarMode.caption__
        <br />
        <label><input type="radio"
