Fix syntax error

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -87,7 +87,7 @@
                      name="scrollbarMode" value="2">
          __MSG_config.scrollbarMode.hide__</label>
     </p>
-    <p class="sub" class="available-only-on-mac">__MSG_config.scrollbarMode.descriptionForMac__</p>
+    <p class="sub available-only-on-mac">__MSG_config.scrollbarMode.descriptionForMac__</p>
     <p><label>__MSG_config.maxTreeLevel.before__
               <input id="maxTreeLevel"
                      type="number"
