--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -59,8 +59,8 @@
               <img src="style-sidebar.png"/>
               __MSG_config.style.sidebar__</label></li>
         <li><label><input type="radio"
-                          name="style" value="systemcolors">
-              __MSG_config.style.systemcolors__</label></li>
+                          name="style" value="highcontrast">
+              __MSG_config.style.highcontrast__</label></li>
         <li><label><input type="radio"
                           name="style" value="none">
               __MSG_config.style.none__</label></li>
