Introduce extra background element to mix system colors

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -64,6 +64,7 @@
     <div class="tab-drop-blocker" id="tab-drop-blocker-right"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-bottom"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
+    <div id="extra-background"></div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
       <li id="dummy-tab" class="tab">
