Use SVG icon for new tab button and closebox

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -44,8 +44,7 @@
       <div class="after-tabs vbox">
         <div class="newtab-button-box vbox">
           <button class="newtab-button"
-                  title="__MSG_tabbar.newTabButton.tooltip__">➕
-          </button>
+                  title="__MSG_tabbar.newTabButton.tooltip__"></button>
           <select class="contextual-identities-selector"
                   title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
         </div>
@@ -55,7 +54,7 @@
       <div id="out-of-view-tab-notifier"></div>
       <div class="newtab-button-box vbox">
         <button class="newtab-button"
-                title="__MSG_tabbar.newTabButton.tooltip__">➕</button>
+                title="__MSG_tabbar.newTabButton.tooltip__"></button>
         <select class="contextual-identities-selector"
                 title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
       </div>
