add screenshot of high contrast theme

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -56,6 +56,7 @@
               __MSG_config.style.sidebar__</label></li>
         <li><label><input type="radio"
                           name="style" value="highcontrast">
+              <img src="style-highcontrast.png"/>
               __MSG_config.style.highcontrast__</label></li>
         <li><label><input type="radio"
                           name="style" value="none">
