Separate implementation for cache

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -24,6 +24,7 @@
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/sidebar/color.js"></script>
     <script type="application/javascript" src="/sidebar/sidebar.js"></script>
+    <script type="application/javascript" src="/sidebar/cache.js"></script>
     <script type="application/javascript" src="/sidebar/scroll.js"></script>
     <script type="application/javascript" src="/sidebar/pinned-tabs.js"></script>
     <script type="application/javascript" src="/sidebar/handlers.js"></script>
