--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -22,6 +22,7 @@
     <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/background/background.js"></script>
+    <script type="application/javascript" src="/background/cache.js"></script>
     <script type="application/javascript" src="/background/handlers.js"></script>
     <script type="application/javascript" src="/background/context-menu.js"></script>
     <script type="application/javascript" src="/background/migration.js"></script>
