--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -322,6 +322,9 @@
                      type="checkbox">
              __MSG_config.debug.label__</label></p>
     <div id="debug-configs">
+      <p><label><input id="useCachedTree"
+                       type="checkbox">
+               __MSG_config.useCachedTree.label__</label></p>
       <p>__MSG_config.colorScheme.caption__
          <br />
          <label><input type="radio"
