--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -19,6 +19,7 @@
     <script type="application/javascript" src="/common/tree/get-tabs.js"></script>
     <script type="application/javascript" src="/common/tree/tab-information.js"></script>
     <script type="application/javascript" src="/common/tree/tree-operations.js"></script>
+    <script type="application/javascript" src="/common/tree/cache.js"></script>
     <script type="application/javascript" src="/common/tree/contextual-identities.js"></script>
     <script type="application/javascript" src="/common/tree/handlers.js"></script>
     <script type="application/javascript" src="/background/background.js"></script>
