Deactivate partial restoration by default

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -325,6 +325,9 @@
       <p><label><input id="useCachedTree"
                        type="checkbox">
                __MSG_config.useCachedTree.label__</label></p>
+      <p class="sub"><label><input id="restoreWithPartialCache"
+                                   type="checkbox">
+                           __MSG_config.restoreWithPartialCache.label__</label></p>
       <p>__MSG_config.colorScheme.caption__
          <br />
          <label><input type="radio"
