--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -322,6 +322,18 @@
                      type="checkbox">
              __MSG_config.debug.label__</label></p>
     <div id="debug-configs">
+      <p><label><input id="logOnUpdated"
+                       type="checkbox">
+               __MSG_config.logOnUpdated.label__</label></p>
+      <p><label><input id="logOnMouseEvent"
+                       type="checkbox">
+               __MSG_config.logOnMouseEvent.label__</label></p>
+      <p><label><input id="logOnScroll"
+                       type="checkbox">
+               __MSG_config.logOnScroll.label__</label></p>
+      <p><label><input id="logOnCollapseExpand"
+                       type="checkbox">
+               __MSG_config.logOnCollapseExpand.label__</label></p>
       <p><label><input id="useCachedTree"
                        type="checkbox">
                __MSG_config.useCachedTree.label__</label></p>
