--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -322,6 +322,8 @@
                      type="checkbox">
              __MSG_config.debug.label__</label></p>
     <div id="debug-configs">
+      <fieldset>
+        <legend>__MSG_config.log.caption__</legend>
       <p><label><input id="logOnUpdated"
                        type="checkbox">
                __MSG_config.logOnUpdated.label__</label></p>
@@ -334,6 +336,7 @@
       <p><label><input id="logOnCollapseExpand"
                        type="checkbox">
                __MSG_config.logOnCollapseExpand.label__</label></p>
+      </fieldset>
       <p><label><input id="useCachedTree"
                        type="checkbox">
                __MSG_config.useCachedTree.label__</label></p>
