Add checkbox to deactivate SVG icon simulation

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -337,6 +337,9 @@
                          type="checkbox">
                  __MSG_config.logOnCollapseExpand.label__</label></p>
       </fieldset>
+      <p><label><input id="simulateSVGContextFill"
+                       type="checkbox">
+               __MSG_config.simulateSVGContextFill.label__</label></p>
       <p><label><input id="useCachedTree"
                        type="checkbox">
                __MSG_config.useCachedTree.label__</label></p>
