Add configuration UI to control auto-group for tabs from pinned tab

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -173,6 +173,9 @@
       </ul>
     </fieldset>
 
+    <p><label><input id="autoGroupNewTabsFromPinned"
+                     type="checkbox">
+              __MSG_config.autoGroupNewTabsFromPinned.label__</p>
     <fieldset>
       <legend>__MSG_config.insertNewTabFromPinnedTabAt.caption__</legend>
       <ul>
