--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -34,7 +34,11 @@
     display: none;
   }
 </style>
+<!--
+  Don't load scripts dynamically, to prevent the tab is closed by Firefox.
+  See also: https://github.com/piroor/treestyletab/issues/1670#issuecomment-350964087
 <script type="application/javascript" src="/common/l10n.js"></script>
 <script type="application/javascript" src="./group-tab.js"></script>
+-->
 <h1><span id="title"></span><input id="title-field" type="text"></h1>
 <p><label><input id="temporary" type="checkbox">__MSG_groupTab.temporary.label__</label></p>
