--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -11,6 +11,7 @@
     <script type="application/javascript" src="/common/Configs.js"></script>
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/common/xpath.js"></script>
+    <script type="application/javascript" src="/common/TabIdFixer.js"></script>
     <script type="application/javascript" src="/common/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/common/MetricsData.js"></script>
     <script type="application/javascript" src="/common/permissions.js"></script>
