--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -12,6 +12,7 @@
     <script type="application/javascript" src="/common/common.js"></script>
     <script type="application/javascript" src="/common/l10n.js"></script>
     <script type="application/javascript" src="/common/xpath.js"></script>
+    <script type="application/javascript" src="/common/TabIdFixer.js"></script>
     <script type="application/javascript" src="/common/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/common/permissions.js"></script>
     <script type="application/javascript" src="/common/MetricsData.js"></script>
