Simplify style definitions around background and mask

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -19,10 +19,7 @@
     display: inline-block;
     height: 1em;
     margin-right: 0.25em;
-    mask-image: url("/sidebar/styles/icons/folder-16.svg");
-    mask-position: left center;
-    mask-repeat: no-repeat;
-    mask-size: 100%;
+    mask: url("/sidebar/styles/icons/folder-16.svg") no-repeat center / 100%;
     width: 1em;
   }
 
