Add configuration UI to control position of scrollbar

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -363,6 +363,17 @@
                        type="number"
                        size="6">
                __MSG_config.maximumAcceptableDelayForTabDuplication.after__</label></p>
+      <p>__MSG_config.sidebarScrollbarPosition.caption__
+         <label><input type="radio"
+                       name="sidebarScrollbarPosition" value="0">
+           __MSG_config.sidebarScrollbarPosition.auto__</label>
+         <label><input type="radio"
+                       name="sidebarScrollbarPosition" value="1">
+           __MSG_config.sidebarScrollbarPosition.left__</label>
+         <label><input type="radio"
+                       name="sidebarScrollbarPosition" value="2">
+           __MSG_config.sidebarScrollbarPosition.right__</label>
+      </p>
       <h2>__MSG_config.all.caption__</h2>
     </div>
   </body>
