Ask how to open the dropped link on a tab #1694

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -30,6 +30,7 @@
     <script type="application/javascript" src="/sidebar/pinned-tabs.js"></script>
     <script type="application/javascript" src="/sidebar/handlers.js"></script>
     <script type="application/javascript" src="/sidebar/drag-and-drop.js"></script>
+    <script type="application/javascript" src="/sidebar/RichConfirm.js"></script>
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
     <script type="application/javascript" src="/common/fake-context-menu/sidebar.js"></script>
     <link rel="stylesheet" type="text/css" href="/common/fake-context-menu/sidebar.css"/>
