Add configuration UI for behavior of dropped link #1694

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -281,6 +281,20 @@
 
     <h1>__MSG_config.advanced.caption__</h1>
     <fieldset>
+      <legend>__MSG_config.dropLinksOnTabBehavior.caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="dropLinksOnTabBehavior" value="0">
+              __MSG_config.dropLinksOnTabBehavior.ask__</label></li>
+        <li><label><input type="radio"
+                          name="dropLinksOnTabBehavior" value="1">
+              __MSG_config.dropLinksOnTabBehavior.load__</label></li>
+        <li><label><input type="radio"
+                          name="dropLinksOnTabBehavior" value="2">
+              __MSG_config.dropLinksOnTabBehavior.newtab__</label></li>
+      </ul>
+    </fieldset>
+    <fieldset>
       <legend>__MSG_config.userStyleRules.label__</legend>
       <p>__MSG_config.userStyleRules.description.before__
          <a href="__MSG_config.userStyleRules.description.link.uri__">__MSG_config.userStyleRules.description.link.label__</a>
