Deactivate label for disabled checkbox automatically

--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -30,6 +30,12 @@
   p.checkbox {
     text-indent: -1.5em;
   }
+  label[disabled="true"] {
+    opacity: 0.5;
+  }
+  label[disabled="true"] input {
+    opacity: 1;
+  }
 
   .user-chrome-css {
     position: fixed;
