--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -96,6 +96,9 @@
     <p class="sub"><label><input id="tabHidePermissionGranted"
                                  type="checkbox">
                           __MSG_config.requestPermissions.tabHide__</label></p>
+    <p class="sub"><label><input id="preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab"
+                                 type="checkbox">
+                          __MSG_config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
