--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -96,9 +96,6 @@
     <p class="sub"><label><input id="tabHidePermissionGranted"
                                  type="checkbox">
                           __MSG_config.requestPermissions.tabHide__</label></p>
-    <p class="sub"><label><input id="preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab"
-                                 type="checkbox">
-                          __MSG_config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label__</label></p>
     <p><label><input id="animation"
                      type="checkbox">
              __MSG_config.animation.label__</label></p>
@@ -396,6 +393,9 @@
                        name="sidebarScrollbarPosition" value="2">
            __MSG_config.sidebarScrollbarPosition.right__</label>
       </p>
+      <p><label><input id="preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab"
+                       type="checkbox">
+                __MSG_config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label__</label></p>
       <h2>__MSG_config.all.caption__</h2>
     </div>
   </body>
