--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -69,6 +69,7 @@
     <div id="background"></div><!-- This is required to hide dummy elements without offscreen rendering outside of the viewport. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 -->
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
+      <span id="dummy-highlight-color-box"></span>
       <li id="dummy-tab" class="tab">
         <span class="favicon">
           <span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span>
