--- a/webextensions/background/background.html
+++ b/webextensions/background/background.html
@@ -15,6 +15,7 @@
     <script type="application/javascript" src="/common/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/common/MetricsData.js"></script>
     <script type="application/javascript" src="/common/permissions.js"></script>
+    <script type="application/javascript" src="/common/RichConfirm.js"></script>
     <script type="application/javascript" src="/common/tree/base.js"></script>
     <script type="application/javascript" src="/common/tree/api-tabs.js"></script>
     <script type="application/javascript" src="/common/tree/get-tabs.js"></script>
