--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -15,6 +15,7 @@
     <script type="application/javascript" src="/common/TabIdFixer.js"></script>
     <script type="application/javascript" src="/common/TabFavIconHelper.js"></script>
     <script type="application/javascript" src="/common/permissions.js"></script>
+    <script type="application/javascript" src="/common/RichConfirm.js"></script>
     <script type="application/javascript" src="/common/MetricsData.js"></script>
     <script type="application/javascript" src="/common/tree/base.js"></script>
     <script type="application/javascript" src="/common/tree/api-tabs.js"></script>
@@ -30,7 +31,6 @@
     <script type="application/javascript" src="/sidebar/pinned-tabs.js"></script>
     <script type="application/javascript" src="/sidebar/handlers.js"></script>
     <script type="application/javascript" src="/sidebar/drag-and-drop.js"></script>
-    <script type="application/javascript" src="/sidebar/RichConfirm.js"></script>
     <link rel="stylesheet" type="text/css" href="/sidebar/sidebar.css"/>
     <script type="application/javascript" src="/common/fake-context-menu/sidebar.js"></script>
     <link rel="stylesheet" type="text/css" href="/common/fake-context-menu/sidebar.css"/>
