Add configuration UI for warnOnCloseTabs #1752

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -302,6 +302,9 @@
               __MSG_config.dropLinksOnTabBehavior.newtab__</label></li>
       </ul>
     </fieldset>
+    <p><label><input id="warnOnCloseTabs"
+                     type="checkbox">
+              __MSG_config.warnOnCloseTabs.label__</label></p>
     <fieldset>
       <legend>__MSG_config.userStyleRules.label__</legend>
       <p>__MSG_config.userStyleRules.description.before__
