Set accesskeys for custom menu items

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -104,6 +104,7 @@
 
 
     <h1>__MSG_config.context.caption__</h1>
+    <div id="contextConfigs">
     <p><label><input id="context_reloadTree"
                      type="checkbox">
               __MSG_context.reloadTree.label__</label></p>
@@ -131,6 +132,7 @@
     <p class="sub"><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
                           __MSG_config.requestPermissions.bookmarks__</label></p>
+    </div>
 
 
     <h1>__MSG_config.newTab.caption__</h1>
