Clear focus of menu item if the cursor is out of menu

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -118,6 +118,7 @@
       <li id="context_closeTab" class="require-context-tab"
           title="__MSG_tabContextMenu.close.label__">__MSG_tabContextMenu.close.label__</li>
     </ul>
+    <div id="tabContextMenu-blocking-screen"></div>
     <script type="application/javascript" src="/sidebar/sidebar.js"></script>
   </body>
 </html>
