--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -6,6 +6,7 @@
   <head>
     <meta charset="UTF-8">
     <script type="application/javascript" src="/common/tree/constants.js"></script>
+    <script type="application/javascript" src="/common/MenuUI.js"></script>
     <script type="application/javascript" src="/common/fake-context-menu/constants.js"></script>
     <script type="application/javascript" src="/common/handle-accel-key.js"></script>
     <script type="application/javascript" src="/common/Configs.js"></script>
