Reimplement container selector by menu UI

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -49,8 +49,8 @@
         <div class="newtab-button-box vbox">
           <button class="newtab-button"
                   title="__MSG_tabbar.newTabButton.tooltip__"></button>
-          <select class="contextual-identities-selector"
-                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
+          <button class="contextual-identities-selector-anchor"
+                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></button>
         </div>
       </div>
     </div>
@@ -59,10 +59,11 @@
       <div class="newtab-button-box vbox">
         <button class="newtab-button"
                 title="__MSG_tabbar.newTabButton.tooltip__"></button>
-        <select class="contextual-identities-selector"
-                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></select>
+        <button class="contextual-identities-selector-anchor"
+                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></button>
       </div>
     </div>
+    <ul id="contextual-identities-selector"></ul>
     <div class="tab-drop-blocker" id="tab-drop-blocker-top"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-right"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-bottom"></div>
