Implement new tab action selector

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -49,8 +49,12 @@
         <div class="newtab-button-box vbox">
           <button class="newtab-button"
                   title="__MSG_tabbar.newTabButton.tooltip__"></button>
+          <button class="newtab-action-selector-anchor"
+                  title="__MSG_tabbar.newTabAction.tooltip__"
+                  data-menu-ui="newtab-action-selector"></button>
           <button class="contextual-identities-selector-anchor"
-                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></button>
+                  title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"
+                  data-menu-ui="contextual-identities-selector"></button>
         </div>
       </div>
     </div>
@@ -59,10 +63,20 @@
       <div class="newtab-button-box vbox">
         <button class="newtab-button"
                 title="__MSG_tabbar.newTabButton.tooltip__"></button>
+        <button class="newtab-action-selector-anchor"
+                title="__MSG_tabbar.newTabAction.tooltip__"
+                data-menu-ui="newtab-action-selector"></button>
         <button class="contextual-identities-selector-anchor"
-                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"></button>
+                title="__MSG_tabbar.newTabWithContexualIdentity.tooltip__"
+                data-menu-ui="contextual-identities-selector"></button>
       </div>
     </div>
+    <ul id="newtab-action-selector">
+      <li data-value="independent">__MSG_tabbar.newTabAction.independent.label__</li>
+      <li data-value="child">__MSG_tabbar.newTabAction.child.label__</li>
+      <li data-value="sibling">__MSG_tabbar.newTabAction.sibling.label__</li>
+      <li data-value="next-sibling">__MSG_tabbar.newTabAction.nextSibling.label__</li>
+    </ul>
     <ul id="contextual-identities-selector"></ul>
     <div class="tab-drop-blocker" id="tab-drop-blocker-top"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-right"></div>
