Add ability to show somethig selector by long-press on the new tab button

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -144,6 +144,13 @@
                 <option value="3">__MSG_config.autoAttachOnNewTabButtonMiddleClick.nextSibling__</option>
               </select>
               __MSG_config.autoAttachOnNewTabButtonMiddleClick.after__</label></p>
+    <p><label>__MSG_config.longPressOnNewTabButton.before__
+              <select id="longPressOnNewTabButton">
+                <option value="newtab-action-selector">__MSG_config.longPressOnNewTabButton.newTabAction__</option>
+                <option value="contextual-identities-selector">__MSG_config.longPressOnNewTabButton.contextualIdentities__</option>
+                <option value="">__MSG_config.longPressOnNewTabButton.none__</option>
+              </select>
+              __MSG_config.longPressOnNewTabButton.after__</label></p>
     <p><label><input id="showNewTabActionSelector"
                      type="checkbox">
              __MSG_config.showNewTabActionSelector.label__</label></p>
