Use dialog color for group tab

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -4,8 +4,8 @@
 <title></title>
 <style type="text/css">
   :root {
-    background: ThreeDFace;
-    color: ButtonText;
+    background: -moz-dialog;
+    color: -moz-dialogtext;
   }
 
   h1 {
